# LogstashUI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.txt  README.md  docker-compose.yml  entrypoint.sh  logstashui.example.yml  logstashui.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: docker-image.yml  test-docker-image.yml
LogstashAgent/: .dockerignore  .gitattributes  .gitignore  COMMANDS.md  Dockerfile  README.md  entrypoint.sh  log_analyzer.py  logstash_api.py  logstash_supervisor.py  logstashagent.yml  main.py  pyproject.toml  requirements.txt  slots.py
LogstashAgent/.github/ISSUE_TEMPLATE/: issue.md
LogstashAgent/.github/workflows/: docker-image.yml
LogstashAgent/config/: jvm.options  logstash.yml  output-block.conf  pipelines.yml  simulate_end.conf  simulate_start.conf
LogstashAgent/docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
LogstashAgent/docker/config/: log4j2.properties  simulate_end.conf
LogstashAgent/modules/: agent_state.py  controller.py  encryption.py  enrollment.py  logstash_supervisor.py  slots.py
LogstashAgent/modules/ls_keystore_utils/: crypto.py  decorators.py  settings.py
LogstashAgent/scripts/: generate_notice.py
LogstashAgent/src/logstashagent/: agent_state.py  controller.py  encryption.py  enrollment.py  log_analyzer.py  logstash_api.py  logstash_supervisor.py  main.py  slots.py
LogstashAgent/src/logstashagent/config/: logstashagent.example.yml  logstashagent.yml
LogstashAgent/src/logstashagent/ls_keystore_utils/: __init__.py  crypto.py  decorators.py  exceptions.py  keystore.py  subprocess_utils.py  utils.py
LogstashAgent/tests/: agent_tests.py  conftest.py  test_agent_state.py  test_controller.py  test_encryption.py  test_enrollment.py  test_error_paths.py  test_integration.py  test_log_analyzer.py  test_logstash_api.py  test_logstash_supervisor.py  test_main.py  test_security.py  test_slots.py
LogstashPluginCollector/: EnrichPlugins.py  ListPluginsAndFields.py  ScrapeLogstashDocs.py  enriched_plugins.json  get_logstash_plugins.sh  logstash_plugin_formatter.py  logstash_plugin_params.csv  plugins.json
LogstashPluginCollector/ScrapeDocs/: ScrapeLogstashDocs.py
LogstashUI/: .dockerignore  Dockerfile  db.sqlite3  entrypoint.sh  manage.py  nginx.conf  pytest.ini  requirements.txt
LogstashUI/API/: logstash_config_parse.py  logstash_metrics.py  simulate_views.py  snmp_views.py  urls.py  views.py
LogstashUI/Common/: context_processors.py  decorators.py  elastic_utils.py  encryption.py  error_handlers.py  formatters.py  (+5 more)
Scripts/: add_license_headers.py
collect_logstash_plugins/: logstash_plugin_params.json
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: _config.yml  build.md  host_mode.md  index.md
logstash_ui/: .i18nrc.json  README.md  kibana.json  package.json
logstash_ui_plugin/: README.md
scripts/: add_license_headers.py  generate_notice.py
temporarilyexclude/: editor.tsx  pipeline_editor.tsx
(+543 files in other folders)
