[project]
name = "LogstashUI"
version = "0.3.5"
description = "A control plane and UI for Logstash!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
    "django>=6.0.3",
    "django-browser-reload>=1.21.0",
    "django-htmx>=1.27.0",
    "django-login-required-middleware>=0.9.0",
    "django-tailwind>=4.4.2",
    "elasticsearch>=9.3.0",
    "gunicorn>=25.3.0",
    "lark>=1.3.1",
    "packaging>=26.0",
    "pygrok>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

