[project]
name = "LogstashUI"
version = "0.4.1"
description = "A control plane and UI for Logstash!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
    "django>=6.0.3",
    "django-browser-reload>=1.21.0",
    "django-htmx>=1.27.0",
    "django-login-required-middleware>=0.9.0",
    "django-tailwind>=4.4.2",
    "elasticsearch>=9.3.0",
    "gevent>=26.4.0",
    "gunicorn>=25.3.0",
    "lark>=1.3.1",
    "markdown>=3.10.2",
    "packaging>=26.0",
    "pygrok>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.10.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "LogstashUI.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = "."
testpaths = ["*/tests/"]
addopts = [
  "--import-mode=importlib",
  "--cov",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-report=html",
]

[tool.coverage.run]
source = ["logstashui"]
branch = true

[tool.coverage.report]
skip_empty = true
show_missing = true
omit = [
  "*/migrations/*",
  "*/tests/*",
  "manage.py",
]
